--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@highcharts/highcharts-react-native": "git+https://github.com/vikisingh23/high-charts-react-native-base.git",
     "react": "17.0.2",
-    "react-native": "0.67.4"
+    "react-native": "0.67.4",
+    "react-native-webview": "^11.22.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
